--- a/index.html
+++ b/index.html
@@ -1,87 +1,97 @@
-<style>
-    /* Carrd'ın kendi boşluklarını sıfırlayalım */
-    #main { display: none !important; } 
-    body, html { margin: 0; padding: 0; overflow: hidden; width: 100vw; height: 100vh; }
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Banana SMP | Melonya Style</title>
+    <style>
+        body, html {
+            margin: 0; padding: 0; height: 100%; width: 100%;
+            font-family: 'Arial Black', sans-serif; overflow: hidden; color: white;
+        }
 
-    .banana-wrapper {
-        position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-        background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), 
-                    url('https://i.imgur.com/vH0Mh9D.jpeg'); /* Senin görselin */
-        background-size: cover; background-position: center;
-        display: flex; flex-direction: column; align-items: center; 
-        justify-content: center; z-index: 9999; font-family: 'Arial Black', sans-serif;
-    }
+        /* ARKA PLAN DÜZELTİLDİ */
+        .hero {
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
+                        url('https://i.imgur.com/XNfR6VQ.png'); /* Senin istediğin görsel */
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+        }
 
-    .top-info {
-        position: absolute; top: 30px; right: 40px; display: flex; gap: 15px;
-    }
+        .top-nav {
+            position: absolute; top: 20px; right: 40px; display: flex; gap: 15px;
+        }
 
-    .nav-box {
-        background: rgba(0, 0, 0, 0.8); padding: 10px 15px; border-radius: 8px;
-        border: 1px solid rgba(255,255,255,0.2); color: white; font-weight: bold;
-        display: flex; align-items: center; gap: 10px; font-size: 14px;
-    }
+        .nav-box {
+            background: rgba(0, 0, 0, 0.85); padding: 10px 18px; border-radius: 8px;
+            border: 1px solid rgba(255,255,255,0.1); font-weight: bold;
+            display: flex; align-items: center; gap: 10px; font-size: 14px;
+        }
 
-    .discount-banner {
-        position: absolute; top: 120px; left: 0; background: #e67e22;
-        color: white; padding: 12px 30px; font-weight: bold; border-radius: 0 8px 8px 0;
-        border: 2px solid #f1c40f; box-shadow: 5px 5px 20px rgba(0,0,0,0.5);
-    }
+        .discount {
+            position: absolute; top: 120px; left: 0; background: #f39c12;
+            padding: 12px 25px; font-weight: bold; border-radius: 0 8px 8px 0;
+            box-shadow: 5px 5px 15px rgba(0,0,0,0.4); font-size: 14px;
+        }
 
-    h1 {
-        font-size: 80px; color: #f1c40f; margin: 0;
-        text-shadow: 5px 5px 0px #000; letter-spacing: 5px; text-align: center;
-    }
+        h1 {
+            font-size: clamp(50px, 10vw, 100px); color: #f1c40f; margin: 0;
+            text-shadow: 6px 6px 0px #000; letter-spacing: 5px; text-transform: uppercase;
+        }
 
-    .btn-row { display: flex; gap: 20px; margin-top: 40px; }
+        .btns { display: flex; gap: 20px; margin-top: 40px; }
 
-    .btn {
-        padding: 18px 45px; border: none; border-radius: 6px;
-        font-weight: 900; cursor: pointer; transition: 0.3s;
-        text-transform: uppercase; font-size: 18px; color: white;
-    }
+        .btn {
+            padding: 18px 40px; border: none; border-radius: 8px;
+            font-weight: 900; cursor: pointer; transition: 0.3s;
+            text-transform: uppercase; font-size: 18px;
+        }
 
-    .play-btn { background: #6c5ce7; box-shadow: 0 5px 0 #4834d4; }
-    .stat-btn { background: #f1c40f; color: black; box-shadow: 0 5px 0 #b7950b; }
+        .play-btn { background: #6c5ce7; color: white; box-shadow: 0 6px 0 #4834d4; }
+        .stat-btn { background: #f1c40f; color: black; box-shadow: 0 6px 0 #b7950b; }
+        .btn:active { transform: translateY(4px); box-shadow: none; }
 
-    #toast {
-        visibility: hidden; background: #2ecc71; color: white; padding: 15px 30px;
-        position: fixed; bottom: 40px; border-radius: 10px; font-weight: bold; z-index: 10000;
-    }
-    #toast.show { visibility: visible; }
-</style>
+        #toast {
+            visibility: hidden; background: #2ecc71; padding: 15px 30px;
+            position: fixed; bottom: 40px; border-radius: 10px; font-weight: bold;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.3); z-index: 100;
+        }
+        #toast.show { visibility: visible; animation: fadeInUp 0.5s; }
+        @keyframes fadeInUp { from {opacity:0; transform:translateY(20px);} to {opacity:1; transform:translateY(0);} }
+    </style>
+</head>
+<body>
 
-<div class="banana-wrapper">
-    <div class="top-info">
+<div class="hero">
+    <div class="top-nav">
         <div class="nav-box">
             <span>banana.falixsrv.me</span>
-            <span id="c-top" style="color: #2ecc71;">● ...</span>
+            <span id="top-count" style="color: #2ecc71;">● ● ●</span>
         </div>
         <div class="nav-box">👤 Technoblade</div>
     </div>
 
-    <div class="discount-banner">🟡 TÜM MUZLARDA %50 İNDİRİM! 🍌</div>
+    <div class="discount">🟡 TÜM MUZLARDA %50 İNDİRİM! 🍌</div>
 
     <h1>BANANA SMP</h1>
     
-    <div class="btn-row">
+    <div class="btns">
         <button class="btn play-btn" onclick="copyIP()">IP KOPYALA</button>
-        <button class="btn stat-btn" id="c-main">YÜKLENİYOR...</button>
+        <button class="btn stat-btn" id="main-count">SUNUCU DURUMU...</button>
     </div>
 </div>
 
-<div id="toast">IP KOPYALANDI! 🍌</div>
+<div id="toast">IP ADRESİ KOPYALANDI! 🍌</div>
 
 <script>
     function copyIP() {
-        const ip = "banana.falixsrv.me";
-        const dummy = document.createElement('textarea');
-        document.body.appendChild(dummy);
-        dummy.value = ip;
-        dummy.select();
-        document.execCommand('copy');
-        document.body.removeChild(dummy);
-        
+        navigator.clipboard.writeText("banana.falixsrv.me");
         const t = document.getElementById("toast");
         t.className = "show";
         setTimeout(() => { t.className = ""; }, 3000);
@@ -91,18 +101,23 @@
         try {
             const res = await fetch('https://api.mcsrvstat.us/2/banana.falixsrv.me');
             const data = await res.json();
-            const main = document.getElementById('c-main');
-            const top = document.getElementById('c-top');
+            const mainBtn = document.getElementById('main-count');
+            const topSpan = document.getElementById('top-count');
 
             if(data.online) {
-                main.innerText = `OYUNCU: ${data.players.online}/${data.players.max}`;
-                top.innerText = `● ${data.players.online}`;
+                mainBtn.innerText = `OYUNCU: ${data.players.online}/${data.players.max}`;
+                topSpan.innerText = `● ${data.players.online} AKTİF`;
+                topSpan.style.color = "#2ecc71";
             } else {
-                main.innerText = "SUNUCU KAPALI";
-                top.innerText = "● KAPALI";
+                mainBtn.innerText = "SUNUCU KAPALI";
+                topSpan.innerText = "● KAPALI";
+                topSpan.style.color = "#e74c3c";
             }
-        } catch(e) { console.log("Hata."); }
+        } catch(e) { console.log("Veri çekilemedi."); }
     }
     getStats();
-    setInterval(getStats, 20000);
+    setInterval(getStats, 15000);
 </script>
+
+</body>
+</html>
