--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
         body, html {
             margin: 0; padding: 0; height: 100%; width: 100%;
             font-family: 'Arial Black', sans-serif; overflow: hidden; color: white;
+            background-color: #111;
         }
 
-        /* ARKA PLAN DÜZELTİLDİ */
+        /* ARKA PLAN AYARI */
         .hero {
-            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-                        url('https://i.imgur.com/XNfR6VQ.png'); /* Senin istediğin görsel */
+            /* Buradaki bg.png ismine dikkat, resmi de bu isimle yüklemelisin */
+            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), 
+                        url('bg.png'); 
             background-size: cover;
             background-position: center;
+            background-repeat: no-repeat;
             height: 100vh;
             display: flex;
             flex-direction: column;
@@ -29,7 +32,7 @@
         }
 
         .nav-box {
-            background: rgba(0, 0, 0, 0.85); padding: 10px 18px; border-radius: 8px;
+            background: rgba(0, 0, 0, 0.8); padding: 10px 18px; border-radius: 8px;
             border: 1px solid rgba(255,255,255,0.1); font-weight: bold;
             display: flex; align-items: center; gap: 10px; font-size: 14px;
         }
@@ -38,14 +41,16 @@
             position: absolute; top: 120px; left: 0; background: #f39c12;
             padding: 12px 25px; font-weight: bold; border-radius: 0 8px 8px 0;
             box-shadow: 5px 5px 15px rgba(0,0,0,0.4); font-size: 14px;
+            z-index: 10;
         }
 
         h1 {
-            font-size: clamp(50px, 10vw, 100px); color: #f1c40f; margin: 0;
+            font-size: clamp(40px, 10vw, 90px); color: #f1c40f; margin: 0;
             text-shadow: 6px 6px 0px #000; letter-spacing: 5px; text-transform: uppercase;
+            text-align: center;
         }
 
-        .btns { display: flex; gap: 20px; margin-top: 40px; }
+        .btns { display: flex; gap: 20px; margin-top: 40px; flex-wrap: wrap; justify-content: center; }
 
         .btn {
             padding: 18px 40px; border: none; border-radius: 8px;
@@ -55,6 +60,7 @@
 
         .play-btn { background: #6c5ce7; color: white; box-shadow: 0 6px 0 #4834d4; }
         .stat-btn { background: #f1c40f; color: black; box-shadow: 0 6px 0 #b7950b; }
+        .btn:hover { transform: translateY(-2px); }
         .btn:active { transform: translateY(4px); box-shadow: none; }
 
         #toast {
@@ -83,7 +89,7 @@
     
     <div class="btns">
         <button class="btn play-btn" onclick="copyIP()">IP KOPYALA</button>
-        <button class="btn stat-btn" id="main-count">SUNUCU DURUMU...</button>
+        <button class="btn stat-btn" id="main-count">BAĞLANILIYOR...</button>
     </div>
 </div>
 
@@ -113,7 +119,9 @@
                 topSpan.innerText = "● KAPALI";
                 topSpan.style.color = "#e74c3c";
             }
-        } catch(e) { console.log("Veri çekilemedi."); }
+        } catch(e) { 
+            document.getElementById('main-count').innerText = "HATA OLUŞTU";
+        }
     }
     getStats();
     setInterval(getStats, 15000);
