--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 <div class="hero">
     <div class="top-nav">
         <div class="nav-box">
-            <span>banana.falixsrv.me</span>
+            <span>bananablocks.falixsrv.me</span>
             <span id="top-count" style="color: #2ecc71;">● ● ●</span>
         </div>
         <div class="nav-box">👤 Technoblade</div>
     </div>
 
-    <div class="discount">🟡 TÜM MUZLARDA %50 İNDİRİM! 🍌</div>
+    <div class="discount">🟡 TÜM MUZLAR BELEŞ 🍌</div>
 
     <h1>BANANA SMP</h1>
     
@@ -129,3 +129,4 @@
 
 </body>
 </html>
+
