--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             background-color: #111;
         }
 
-        /* ARKA PLAN - Yüklediğin bg.png dosyasını kullanır */
+        /* ARKA PLAN AYARI */
         .hero {
             background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), 
-                        url('bg.png'); 
+                        url('bg.png'), url('bg.jpg'), url('bg.webp'); /* Hangi uzantı varsa onu çeker */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -106,7 +106,6 @@
 
     async function getStats() {
         try {
-            // Yeni server IP adresi kullanılıyor
             const res = await fetch(`https://api.mcsrvstat.us/2/${SERVER_IP}`);
             const data = await res.json();
             const mainBtn = document.getElementById('main-count');
