--- a/index.html
+++ b/index.html
@@ -3,130 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana SMP | Melonya Style</title>
+    <title>Banana SMP | Resmi Web Sitesi</title>
     <style>
-        body, html {
-            margin: 0; padding: 0; height: 100%; width: 100%;
-            font-family: 'Arial Black', sans-serif; overflow: hidden; color: white;
-            background-color: #111;
-        }
-
-        /* ARKA PLAN AYARI */
-        .hero {
-            background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), 
-                        url('bg.png'), url('bg.jpg'), url('bg.webp'); /* Hangi uzantı varsa onu çeker */
+        body {
+            margin: 0;
+            padding: 0;
+            background-image: url('bg.png'); /* Arka plan dosyan */
             background-size: cover;
             background-position: center;
-            background-repeat: no-repeat;
-            height: 100vh;
+            background-attachment: fixed;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            position: relative;
-        }
-
-        .top-nav {
-            position: absolute; top: 20px; right: 40px; display: flex; gap: 15px;
-        }
-
-        .nav-box {
-            background: rgba(0, 0, 0, 0.8); padding: 10px 18px; border-radius: 8px;
-            border: 1px solid rgba(255,255,255,0.1); font-weight: bold;
-            display: flex; align-items: center; gap: 10px; font-size: 14px;
-        }
-
-        .discount {
-            position: absolute; top: 120px; left: 0; background: #f39c12;
-            padding: 12px 25px; font-weight: bold; border-radius: 0 8px 8px 0;
-            box-shadow: 5px 5px 15px rgba(0,0,0,0.4); font-size: 14px;
-            z-index: 10;
-        }
-
-        h1 {
-            font-size: clamp(40px, 10vw, 90px); color: #f1c40f; margin: 0;
-            text-shadow: 6px 6px 0px #000; letter-spacing: 5px; text-transform: uppercase;
+            height: 100vh;
             text-align: center;
+            background-color: black; /* Resim yüklenmezse diye */
         }
 
-        .btns { display: flex; gap: 20px; margin-top: 40px; flex-wrap: wrap; justify-content: center; }
+        .container {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 40px;
+            border-radius: 20px;
+            border: 2px solid #f1c40f; /* Muz sarısı çerçeve */
+            box-shadow: 0 0 20px rgba(241, 196, 15, 0.5);
+        }
+
+        h1 { font-size: 3rem; margin-bottom: 10px; color: #f1c40f; }
+        p { font-size: 1.2rem; }
+
+        .status-box {
+            margin: 20px 0;
+            padding: 15px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+        }
 
         .btn {
-            padding: 18px 40px; border: none; border-radius: 8px;
-            font-weight: 900; cursor: pointer; transition: 0.3s;
-            text-transform: uppercase; font-size: 18px;
+            display: inline-block;
+            padding: 15px 30px;
+            background: #f1c40f;
+            color: black;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
+            transition: 0.3s;
+            margin-top: 20px;
         }
 
-        .play-btn { background: #6c5ce7; color: white; box-shadow: 0 6px 0 #4834d4; }
-        .stat-btn { background: #f1c40f; color: black; box-shadow: 0 6px 0 #b7950b; }
-        .btn:hover { transform: translateY(-2px); }
-        .btn:active { transform: translateY(4px); box-shadow: none; }
-
-        #toast {
-            visibility: hidden; background: #2ecc71; padding: 15px 30px;
-            position: fixed; bottom: 40px; border-radius: 10px; font-weight: bold;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.3); z-index: 100;
-        }
-        #toast.show { visibility: visible; animation: fadeInUp 0.5s; }
-        @keyframes fadeInUp { from {opacity:0; transform:translateY(20px);} to {opacity:1; transform:translateY(0);} }
+        .btn:hover { background: #d4ac0d; transform: scale(1.05); }
     </style>
 </head>
 <body>
 
-<div class="hero">
-    <div class="top-nav">
-        <div class="nav-box">
-            <span>bananablocks.falixsrv.me</span>
-            <span id="top-count" style="color: #2ecc71;">● ● ●</span>
+    <div class="container">
+        <h1>🍌 BANANA SMP</h1>
+        <p>En Tatlı Survival Deneyimi!</p>
+
+        <div class="status-box">
+            <div>Sunucu Durumu: <span id="online" style="font-weight: bold;">Yükleniyor...</span></div>
+            <div style="margin-top: 10px;">Aktif Oyuncu: <span id="players" style="color: #f1c40f; font-weight: bold;">0/20</span></div>
         </div>
-        <div class="nav-box">👤 Technoblade</div>
+
+        <p>Kayıt olmak veya yardım almak için sağ alttaki chat balonunu kullan!</p>
+        <div style="margin-top: 10px; font-size: 0.9rem; color: #ccc;">IP: banana.falix.gg</div>
     </div>
 
-    <div class="discount">🟡 TÜM MUZLARDA %50 İNDİRİM! 🍌</div>
-
-    <h1>BANANA SMP</h1>
-    
-    <div class="btns">
-        <button class="btn play-btn" onclick="copyIP()">IP KOPYALA</button>
-        <button class="btn stat-btn" id="main-count">BAĞLANILIYOR...</button>
-    </div>
-</div>
-
-<div id="toast">IP ADRESİ KOPYALANDI! 🍌</div>
-
-<script>
-    const SERVER_IP = "bananablocks.falixsrv.me";
-
-    function copyIP() {
-        navigator.clipboard.writeText(SERVER_IP);
-        const t = document.getElementById("toast");
-        t.className = "show";
-        setTimeout(() => { t.className = ""; }, 3000);
-    }
-
-    async function getStats() {
-        try {
-            const res = await fetch(`https://api.mcsrvstat.us/2/${SERVER_IP}`);
-            const data = await res.json();
-            const mainBtn = document.getElementById('main-count');
-            const topSpan = document.getElementById('top-count');
-
-            if(data.online) {
-                mainBtn.innerText = `OYUNCU: ${data.players.online}/${data.players.max}`;
-                topSpan.innerText = `● ${data.players.online} AKTİF`;
-                topSpan.style.color = "#2ecc71";
-            } else {
-                mainBtn.innerText = "SUNUCU KAPALI";
-                topSpan.innerText = "● KAPALI";
-                topSpan.style.color = "#e74c3c";
-            }
-        } catch(e) { 
-            document.getElementById('main-count').innerText = "HATA OLUŞTU";
+    <script>
+        function updateStatus() {
+            // Buraya kendi Falix IP'ni yaz kanka
+            fetch('https://api.mcstatus.io/v2/status/java/banana.falix.gg')
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('online').innerText = data.online ? "AKTİF ✅" : "KAPALI ❌";
+                    document.getElementById('online').style.color = data.online ? "#2ecc71" : "#e74c3c";
+                    document.getElementById('players').innerText = data.players.online + "/" + data.players.max;
+                })
+                .catch(err => console.log("Hata:", err));
         }
-    }
-    getStats();
-    setInterval(getStats, 15000);
-</script>
+        updateStatus();
+        setInterval(updateStatus, 30000); // 30 saniyede bir günceller
+    </script>
 
-</body>
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/69635fd4aae923197d506f75/1jem2slpo';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    </body>
 </html>
