--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana SMP | Resmi Web Sitesi</title>
     <style>
+        /* Arka Plan ve Genel Ayarlar */
         body {
             margin: 0;
             padding: 0;
-            background-image: url('bg.png'); 
+            background-color: #000;
+            background-image: url('bg.png'); /* bg.png dosyan varsa burada görünür */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -18,79 +20,149 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
             text-align: center;
-            background-color: black;
+            overflow-x: hidden;
         }
 
+        /* Ana Panel */
         .container {
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.85);
             padding: 40px;
             border-radius: 20px;
             border: 2px solid #f1c40f;
-            box-shadow: 0 0 20px rgba(241, 196, 15, 0.5);
+            box-shadow: 0 0 30px rgba(241, 196, 15, 0.4);
             max-width: 500px;
+            z-index: 10;
+            margin: 20px;
         }
 
-        h1 { font-size: 3rem; margin-bottom: 10px; color: #f1c40f; }
-        p { font-size: 1.2rem; }
+        h1 { font-size: 3rem; margin-bottom: 10px; color: #f1c40f; text-shadow: 2px 2px 10px black; letter-spacing: 2px; }
+        p { font-size: 1.1rem; line-height: 1.6; }
 
+        /* Sunucu Durum Kutusu */
         .status-box {
             margin: 20px 0;
             padding: 15px;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(255, 255, 255, 0.05);
             border-radius: 10px;
+            border-left: 4px solid #f1c40f;
         }
 
-        .copy-btn {
+        /* Kayıt Butonu */
+        .btn-kayit {
             display: inline-block;
-            padding: 10px 20px;
+            padding: 15px 35px;
             background: #f1c40f;
             color: black;
             text-decoration: none;
             font-weight: bold;
-            border-radius: 5px;
+            border-radius: 50px;
             cursor: pointer;
-            margin-top: 10px;
             border: none;
+            font-size: 1.2rem;
+            transition: all 0.3s ease;
+            box-shadow: 0 5px 15px rgba(241, 196, 15, 0.3);
         }
 
-        .copy-btn:active { transform: scale(0.95); }
+        .btn-kayit:hover { 
+            transform: scale(1.05) translateY(-3px); 
+            background: #fff100;
+            box-shadow: 0 8px 20px rgba(241, 196, 15, 0.5);
+        }
+
+        /* Onay Mesajı Animasyonu */
+        #onay-mesaji {
+            display: none;
+            color: #f1c40f;
+            font-weight: bold;
+            font-size: 1.4rem;
+            margin-top: 20px;
+            animation: pulse 1.5s infinite;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); opacity: 1; }
+            50% { transform: scale(1.05); opacity: 0.8; }
+            100% { transform: scale(1); opacity: 1; }
+        }
+
+        /* Footer (Copyright Kısmı) */
+        footer {
+            margin-top: 30px;
+            font-size: 0.9rem;
+            color: rgba(255, 255, 255, 0.5);
+            width: 100%;
+            padding-bottom: 20px;
+        }
+
+        footer b { color: #f1c40f; }
     </style>
 </head>
 <body>
 
     <div class="container">
         <h1>🍌 BANANA SMP</h1>
-        <p>En Tatlı Survival Deneyimi!</p>
-
+        
         <div class="status-box">
-            <div>Sunucu Durumu: <span id="online" style="font-weight: bold;">Yükleniyor...</span></div>
-            <div style="margin-top: 10px;">Aktif Oyuncu: <span id="players" style="color: #f1c40f; font-weight: bold;">0/20</span></div>
+            <div>Sunucu Durumu: <span id="online">Bağlanılıyor...</span></div>
+            <div style="margin-top: 10px;">Aktif Oyuncu: <span id="players" style="color: #f1c40f;">0/20</span></div>
         </div>
 
-        <p>Kayıt olmak veya yardım almak için sağ alttaki chat balonunu kullan!</p>
-        <button class="copy-btn" onclick="copyIP()">IP Kopyala: banana.falix.gg</button>
+        <div id="kayit-alani">
+            <p>Muz Krallığı'na katılmaya hazır mısın?<br>Butona bas ve chate bilgilerini yaz!</p>
+            <button class="btn-kayit" onclick="kayitBaslat()">🍌 KAYIT OL</button>
+        </div>
+
+        <div id="onay-mesaji">
+            🎶 BA-NA-NA-NAAA! 🎶<br>
+            Bilgilerini aşağıdaki chate yaz kanka!
+        </div>
     </div>
 
+    <footer>
+        &copy; 2026 <b>Banana SMP</b>. Tüm Hakları Saklıdır.<br>
+        Designed for the Ultimate Banana Experience.
+    </footer>
+
+    <audio id="banana-audio">
+        <source src="https://www.myinstants.com/media/sounds/mionion-banana.mp3" type="audio/mpeg">
+    </audio>
+
     <script>
-        function copyIP() {
-            navigator.clipboard.writeText("banana.falix.gg");
-            alert("IP Adresi Kopyalandı! Sunucuya Bekliyoruz 🍌");
+        function kayitBaslat() {
+            // 1. Minyon şarkısını çal
+            var audio = document.getElementById("banana-audio");
+            audio.play().catch(function(error) {
+                console.log("Ses çalma engellendi: ", error);
+            });
+
+            // 2. Arayüzü değiştir
+            document.getElementById('kayit-alani').style.display = 'none';
+            document.getElementById('onay-mesaji').style.display = 'block';
+
+            // 3. Tawk.to panelini aç
+            if (typeof Tawk_API !== 'undefined') {
+                Tawk_API.maximize();
+            }
         }
 
+        // Sunucu Durumu (API)
         function updateStatus() {
             fetch('https://api.mcstatus.io/v2/status/java/banana.falix.gg')
                 .then(response => response.json())
                 .then(data => {
-                    document.getElementById('online').innerText = data.online ? "AKTİF ✅" : "KAPALI ❌";
+                    document.getElementById('online').innerText = data.online ? "SUNUCU AKTİF ✅" : "SUNUCU KAPALI ❌";
                     document.getElementById('online').style.color = data.online ? "#2ecc71" : "#e74c3c";
                     document.getElementById('players').innerText = data.players.online + "/" + data.players.max;
                 })
-                .catch(err => console.log("Hata:", err));
+                .catch(err => {
+                    document.getElementById('online').innerText = "HATA ❌";
+                });
         }
+        
         updateStatus();
-        setInterval(updateStatus, 30000);
+        setInterval(updateStatus, 30000); // 30 saniyede bir güncelle
     </script>
 
     <script type="text/javascript">
