--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <div id="onay-mesaji">
             🎶 BA-NA-NA-NAAA! 🎶<br>
-            Bilgilerini aşağıdaki chate yaz kanka!
+            Bilgilerini chate yazınız
         </div>
     </div>
 
@@ -179,3 +179,4 @@
 
 </body>
 </html>
+
