--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <div id="onay-mesaji">
             🎶 BA-NA-NA-NAAA! 🎶<br>
-            Bilgilerini aşağıdaki chate yaz kanka!
+            Chat açıldı, bilgilerini oraya yaz kanka!
         </div>
     </div>
 
@@ -98,7 +98,7 @@
         &copy; 2026 <b>Banana SMP</b>. Tüm Hakları Saklıdır.
     </footer>
 
-    <audio id="banana-audio">
+    <audio id="banana-audio" preload="auto">
         <source src="banana.mp3" type="audio/mpeg">
     </audio>
 
@@ -106,11 +106,14 @@
         function kayitBaslat() {
             var audio = document.getElementById("banana-audio");
             
-            // Sesi oynatmayı zorla
+            // Sesi önce yükle sonra çal
+            audio.load();
             audio.play().then(() => {
-                console.log("Müzik başarıyla çalıyor!");
+                console.log("Müzik çalıyor!");
             }).catch(e => {
-                console.log("Tarayıcı engelledi veya dosya bulunamadı:", e);
+                console.log("Hata:", e);
+                // Eğer hala çalmazsa alarm verip uyarmak için:
+                console.warn("Ses dosyasını tarayıcı engelleyebilir veya dosya yolu hatalı.");
             });
 
             document.getElementById('kayit-alani').style.display = 'none';
