--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana SMP | Sunucu Durumu</title>
+    <title>Banana SMP | Resmi Web Sitesi</title>
     <link rel="icon" type="image/png" sizes="32x32" href="server-icon.png">
     
     <style>
@@ -32,95 +32,95 @@
 
         .main-card {
             text-align: center;
-            background: rgba(15, 15, 15, 0.85); /* Melonya tarzı koyu panel */
-            padding: 50px;
-            border-radius: 25px;
+            background: rgba(10, 10, 10, 0.8); /* Koyu Melonya Paneli */
+            padding: 40px;
+            border-radius: 20px;
             backdrop-filter: blur(12px);
-            border: 1px solid rgba(241, 196, 15, 0.4);
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.9);
-            max-width: 500px;
-            width: 90%;
+            border: 2px solid #f1c40f;
+            box-shadow: 0 0 40px rgba(0, 0, 0, 1);
+            max-width: 450px;
+            width: 85%;
+            z-index: 10;
         }
 
         .logo {
-            width: 140px;
-            height: 140px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
             object-fit: cover;
-            border: 5px solid #f1c40f;
-            margin-bottom: 25px;
-            filter: drop-shadow(0 0 15px #f1c40f);
+            border: 4px solid #f1c40f;
+            margin-bottom: 20px;
+            box-shadow: 0 0 20px #f1c40f;
         }
 
         h1 {
-            font-size: 3rem;
+            font-size: 2.8rem;
             margin: 0;
             color: #f1c40f;
-            letter-spacing: 2px;
-            text-shadow: 0 0 20px rgba(241, 196, 15, 0.6);
-            animation: pulse 2s infinite alternate;
+            text-shadow: 0 0 15px rgba(241, 196, 15, 0.5);
+            animation: textPulse 2s infinite alternate;
         }
 
-        @keyframes pulse {
-            from { transform: scale(1); opacity: 0.9; }
-            to { transform: scale(1.03); opacity: 1; }
+        @keyframes textPulse {
+            from { transform: scale(1); }
+            to { transform: scale(1.03); }
         }
 
         .ip-box {
             background: rgba(255, 255, 255, 0.05);
-            padding: 15px;
-            border-radius: 12px;
-            margin: 25px 0;
-            border: 1px dashed rgba(241, 196, 15, 0.5);
+            padding: 12px;
+            border-radius: 10px;
+            margin: 20px 0;
+            border: 1px dashed #f1c40f;
             cursor: pointer;
             transition: 0.3s;
         }
 
         .ip-box:hover {
-            background: rgba(241, 196, 15, 0.1);
+            background: rgba(241, 196, 15, 0.15);
         }
 
         .status-info {
-            font-size: 1.1rem;
             margin-bottom: 20px;
-            color: #ccc;
+            font-weight: bold;
         }
 
         .online-dot {
-            height: 10px;
-            width: 10px;
+            height: 12px;
+            width: 12px;
             background-color: #2ecc71;
             border-radius: 50%;
             display: inline-block;
-            margin-right: 5px;
+            margin-right: 8px;
             box-shadow: 0 0 10px #2ecc71;
         }
 
-        .btn-group {
+        .btn-container {
             display: flex;
-            gap: 15px;
+            gap: 10px;
             justify-content: center;
         }
 
         .btn {
             background: #f1c40f;
             color: #000;
-            padding: 15px 25px;
-            border-radius: 10px;
+            padding: 14px 20px;
+            border-radius: 8px;
             font-weight: 900;
-            text-decoration: none;
+            text-decoration: none !important;
             transition: 0.3s;
             flex: 1;
             text-transform: uppercase;
+            display: block;
         }
 
         .btn:hover {
             background: #fff;
             transform: translateY(-3px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.4);
+            box-shadow: 0 5px 15px rgba(241, 196, 15, 0.4);
         }
 
-        .btn.secondary {
+        .btn.sec {
             background: transparent;
             color: #f1c40f;
             border: 2px solid #f1c40f;
@@ -130,49 +130,48 @@
 <body>
 
     <div class="main-card">
-        <img src="server-icon.png" alt="Logo" class="logo">
+        <img src="server-icon.png" alt="Banana Logo" class="logo">
         <h1>BANANA SMP</h1>
         
         <div class="ip-box" onclick="copyIP()">
-            <span style="display:block; font-size: 0.8rem; color: #aaa;">TIKLA IP KOPYALA</span>
-            <span id="server-ip" style="font-size: 1.2rem; color: #f1c40f;">bananablocks.falixsrv.me</span>
+            <span style="font-size: 0.7rem; color: #aaa; display: block;">IP ADRESİNİ KOPYALA</span>
+            <span id="server-ip" style="font-size: 1.1rem; color: #f1c40f;">bananablocks.falixsrv.me</span>
         </div>
 
         <div class="status-info">
-            <span class="online-dot"></span> <span id="status-text">Yükleniyor...</span> 
-            | <span id="online-count">0/20</span> Oyuncu
+            <span class="online-dot"></span> <span id="status-text">KONTROL EDİLİYOR...</span> 
+            | <span id="online-count">0/20</span> OYUNCU
         </div>
 
-        <div class="btn-group">
+        <div class="btn-container">
             <a href="https://falixnodes.net/register" target="_blank" class="btn">KAYIT OL</a>
-            <a href="#" onclick="copyIP()" class="btn secondary">IP KOPYALA</a>
+            <a href="#" onclick="copyIP()" class="btn sec">IP KOPYALA</a>
         </div>
     </div>
 
     <script>
-        // Sunucu Durumu
+        // IP Kopyalama
+        function copyIP() {
+            const ipText = document.getElementById('server-ip').innerText;
+            navigator.clipboard.writeText(ipText);
+            alert("Sunucu adresi kopyalandı! Oyuna katılabilirsin.");
+        }
+
+        // Durum Güncelleme
         async function updateStatus() {
             try {
-                const response = await fetch('https://api.mcstatus.io/v2/status/java/bananablocks.falixsrv.me');
-                const data = await response.json();
+                const res = await fetch('https://api.mcstatus.io/v2/status/java/bananablocks.falixsrv.me');
+                const data = await res.json();
                 if (data.online) {
                     document.getElementById('status-text').innerText = "AKTİF";
                     document.getElementById('online-count').innerText = data.players.online + "/" + data.players.max;
                 } else {
                     document.getElementById('status-text').innerText = "KAPALI";
-                    document.getElementById('online-count').innerText = "0/20";
                 }
-            } catch (e) { console.log(e); }
+            } catch (e) { console.log("Hata:", e); }
         }
         updateStatus();
         setInterval(updateStatus, 30000);
-
-        // IP Kopyalama Fonksiyonu
-        function copyIP() {
-            const ip = document.getElementById('server-ip').innerText;
-            navigator.clipboard.writeText(ip);
-            alert("IP Adresi Kopyalandı: " + ip);
-        }
 
         // Muz Sesi
         document.addEventListener('click', () => {
@@ -180,5 +179,17 @@
         });
     </script>
 
-    </body>
+    <script type="text/javascript">
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/69635fd4aae923197d506f75/1jem2slpo';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+        })();
+    </script>
+
+</body>
 </html>
