--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            /* Senin Arka Planın */
             background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('bg.png');
             background-size: 120% 120%;
             background-position: center;
@@ -110,11 +109,12 @@
             margin-top: 40px;
             display: flex;
             gap: 20px;
+            justify-content: center;
         }
 
         .btn-main {
-            padding: 20px 45px;
-            font-size: 1.1rem;
+            padding: 20px 60px;
+            font-size: 1.2rem;
             font-weight: 900;
             border-radius: 8px;
             text-decoration: none;
@@ -126,7 +126,6 @@
         }
 
         .btn-yellow { background: #f1c40f; color: black; box-shadow: 0 5px 0 #b7950b; }
-        .btn-blue { background: #5865F2; color: white; box-shadow: 0 5px 0 #3e48ab; }
 
         .btn-main:hover { transform: translateY(-3px); }
 
@@ -162,7 +161,7 @@
 
         .market-card:hover { border-color: #f1c40f; transform: translateY(-10px); }
 
-        .market-card img { width: 100px; margin-bottom: 20px; }
+        .market-card img { width: 100px; height: 100px; object-fit: contain; margin-bottom: 20px; }
 
         .price-tag {
             display: block;
@@ -192,8 +191,9 @@
             font-weight: 700;
             font-size: 1.1rem;
             background: rgba(0,0,0,0.5);
-            padding: 8px 20px;
+            padding: 8px 25px;
             border-radius: 50px;
+            display: inline-block;
         }
     </style>
 </head>
@@ -214,13 +214,12 @@
             <h2>NETWORK</h2>
             
             <div class="status-bar">
-                <span id="dot" style="height:10px; width:10px; border-radius:50%; display:inline-block; background:#7f8c8d; margin-right:8px;"></span>
-                <span id="status-text">BAĞLANILIYOR...</span> | <span id="online-count">0/20</span> OYUNCU
+                <span id="dot" style="height:12px; width:12px; border-radius:50%; display:inline-block; background:#7f8c8d; margin-right:8px;"></span>
+                <span id="status-text">BAĞLANILIYOR...</span> | <span id="online-count">0/20</span> AKTİF
             </div>
 
             <div class="hero-btns">
-                <button class="btn-main btn-yellow" onclick="openChat()">SUNUCU KAYIT</button>
-                <button class="btn-main btn-blue" onclick="window.open('https://discord.gg/DAVET_LINKIN')">DISCORD KATIL</button>
+                <button class="btn-main btn-yellow" onclick="openChat()">SUNUCU KAYIT OL</button>
             </div>
         </div>
     </section>
@@ -252,7 +251,7 @@
     <script>
         function copyIP() {
             navigator.clipboard.writeText("bananablocks.falixsrv.me");
-            alert("IP Adresi Kopyalandı! Minecraft'a giriş yapabilirsiniz.");
+            alert("Sunucu IP adresi kopyalandı! Oyuna katılabilirsiniz.");
         }
 
         function openChat() {
@@ -268,10 +267,12 @@
                 if (data.online) {
                     statusText.innerText = "SUNUCU AKTİF";
                     dot.style.background = "#2ecc71";
+                    dot.style.boxShadow = "0 0 10px #2ecc71";
                     document.getElementById('online-count').innerText = data.players.online + "/" + data.players.max;
                 } else {
                     statusText.innerText = "SUNUCU KAPALI";
                     dot.style.background = "#e74c3c";
+                    dot.style.boxShadow = "0 0 10px #e74c3c";
                 }
             } catch (e) { console.log(e); }
         }
